	* predicate inputs of external atoms no longer may be variables, this was possible in dlvhex 1.X but it was not correctly implemented (see variable_input_predicates.hex example in trunk/) and we need a new implementation strategy for doing that. this change causes the changes to extatom5.hex and extatom6.hex testcases
	* deactivated weak testcases (weak constraints will be implemented differently and more efficiently)
	../weak1.hex weak1.out -a
	../weak1.hex weak1r.out -ra
	../weak2.hex weak2.out -a
	* deactivated namespace testcases (namespaces will be implemented as a plugin)
	../namespace1.hex namespace1.out
	../namespace2.hex namespace2.out

2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Set error-limit to 5 for clang.
	* testsuite/Makefile.am: Likewise.

2010-11-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am (EXTRA_DIST): Add minimality and
	builtin_safety{1,2} test cases.

2010-10-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am: Add builtin_safety2.hex for new DLV
	release 2010-10-14.
	* examples/builtin_safety1.hex: Likewise.
	* examples/builtin_safety2.hex: Likewise.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/builtin_safety1.out: Likewise.
	* examples/tests/builtin_safety2.out: Likewise.

2010-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/BoostComponentFinder.cpp: Applied the nice part of the
	clang diff (the one that does not deal with a clang bug).
	* Modelbuilding-Concept.txt: Thoughts on online vs offline and
	projected vs non projected model building.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.
