@@ -9,7 +9,6 @@
 ../tertop.hex tertop.out
 ../agg1.hex agg1.out
 ../agg2.hex agg2.out
-../msp.hex msp.out -a
 ../3col.hex 3col.out
 ../equality.hex equality.out
 ../extatom1.hex extatom1.out
